--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,43 @@ header {
       header nav .search-box ::placeholder {
         color: #fff; }
 
+#desktop-image {
+  position: relative;
+  padding: 100px 0; }
+  #desktop-image h2 {
+    font-weight: 600;
+    font-size: 32px; }
+  #desktop-image p {
+    font-size: 16px;
+    padding: 10px 150px 50px; }
+  #desktop-image .mac {
+    background-image: url(../images/mac.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 610px;
+    position: relative; }
+    #desktop-image .mac .mac-wallpaper {
+      top: 30px;
+      left: 30px;
+      position: absolute;
+      background-color: turquoise; }
+  #desktop-image .macbook {
+    background-image: url(../images/mac.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    height: 415px;
+    width: 500px;
+    right: 14%;
+    bottom: 65px; }
+    #desktop-image .macbook .macbook-wallpaper {
+      top: 18px;
+      left: 20px;
+      position: absolute;
+      background-color: turquoise; }
+
 #testing-part {
   padding: 100px 0px;
   background-color: #dc354514; }
