--- a/assets/sass/_indexPage.scss
+++ b/assets/sass/_indexPage.scss
@@ -149,6 +149,59 @@ header {
     }
 }
 
+#desktop-image {
+    position: relative;
+    padding: 100px 0;
+
+    h2 {
+        font-weight: 600;
+        font-size: 32px;
+    }
+
+    p {
+        font-size: 16px;
+        padding: 10px 150px 50px;
+    }
+
+   
+
+    .mac {
+        background-image: url(../images/mac.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 610px;
+        position: relative;
+
+
+        .mac-wallpaper {
+            top: 30px;
+            left: 30px;
+            position: absolute;
+            background-color: turquoise;
+        }
+    }
+
+    .macbook {
+        background-image: url(../images/mac.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        height: 415px;
+        width: 500px;
+        right: 14%;
+        bottom: 65px;
+
+        .macbook-wallpaper {
+            top: 18px;
+            left: 20px;
+            position: absolute;
+            background-color: turquoise;
+        }
+    }
+}
+
 #testing-part {
     padding: 100px 0px;
     background-color: #dc354514;
