--- a/assets/sass/_indexPage.scss
+++ b/assets/sass/_indexPage.scss
@@ -32,14 +32,16 @@
         padding: 20px 30px;
         background-color: $red;
         color: $white;
+        font-weight: 600;
         border-radius: 40px;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        transition: all 0.3s;
-        border: 2px solid $red;
+        transition: all .2s ease-in-out;
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(255, 189, 128, 1) 0%, rgba(255, 31, 142, 1) 100%);
 
         &:hover {
-            border: 2px solid $red;
-            background-color: transparent;
+            color: #000;
+            padding: 20px 35px;
         }
     }
 }
@@ -158,12 +160,12 @@ header {
         font-size: 32px;
     }
 
-    p {
+    .heading-p {
         font-size: 16px;
         padding: 10px 150px 50px;
     }
 
-   
+
 
     .mac {
         background-image: url(../images/mac.png);
@@ -182,20 +184,31 @@ header {
         }
     }
 
+    .side-text {
+        position: absolute;
+        right: 0;
+        width: 500px;
+
+        p {
+            font-size: 18px;
+            padding: 50px 50px 30px;
+        }
+    }
+
     .macbook {
-        background-image: url(../images/mac.png);
+        background-image: url(../images/macbook.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         position: absolute;
-        height: 415px;
+        height: 286px;
         width: 500px;
         right: 14%;
         bottom: 65px;
 
         .macbook-wallpaper {
-            top: 18px;
-            left: 20px;
+            top: 15px;
+            left: 55px;
             position: absolute;
             background-color: turquoise;
         }
@@ -262,16 +275,16 @@ header {
         background-color: $red;
         color: #fff;
         font-weight: 600;
-        font-size: 14px;
+        font-size: 16px;
         border-radius: 40px;
         box-shadow: rgba(100, 100, 111, 0.20) 0px 7px 29px 0px;
-        transition: all 0.3s;
-        border: 2px solid $red;
+        transition: all .2s ease-in-out;
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(255, 189, 128, 1) 0%, rgba(255, 31, 142, 1) 100%);
 
         &:hover {
-            border: 2px solid $red;
-            background-color: transparent;
-            color: $black;
+            color: #000;
+            padding: 15px 30px;
         }
     }
 }
@@ -296,16 +309,141 @@ header {
         background-color: $red;
         color: #fff;
         font-weight: 600;
-        font-size: 14px;
+        font-size: 16px;
         border-radius: 40px;
         box-shadow: rgba(100, 100, 111, 0.20) 0px 7px 29px 0px;
-        transition: all 0.3s;
-        border: 2px solid $red;
+        transition: all .2s ease-in-out;
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(255, 189, 128, 1) 0%, rgba(255, 31, 142, 1) 100%);
 
         &:hover {
-            border: 2px solid $red;
             background-color: transparent;
-            color: $black;
+            color: #000;
+            padding: 15px 30px;
         }
     }
+}
+
+
+#creators-earnings {
+    padding: 100px 0px;
+
+    
+
+
+    // doesnt work funnly on firefox or edge, need to fix
+
+    .range-slider {
+        width: 300px;
+        text-align: center;
+        position: relative;
+
+        .rangeValues {
+            display: block;
+        }
+    }
+
+    input[type=range] {
+        -webkit-appearance: none;
+        border: 1px solid white;
+        width: 500px;
+        position: absolute;
+        left: 0;
+    }
+
+    input[type=range]::-webkit-slider-runnable-track {
+        width: 300px;
+        height: 10px;
+        background: #ddd;
+        border: none;
+        border-radius: 3px;
+
+    }
+
+    input[type=range]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        border: none;
+        height: 26px;
+        width: 26px;
+        border-radius: 50%;
+        background: #21c1ff;
+        margin-top: -2px;
+        cursor: pointer;
+        position: relative;
+        z-index: 1;
+    }
+
+    input[type=range]:focus {
+        outline: none;
+    }
+
+    input[type=range]:focus::-webkit-slider-runnable-track {
+        background: #ccc;
+    }
+
+    input[type=range]::-moz-range-track {
+        width: 300px;
+        height: 5px;
+        background: #ddd;
+        border: none;
+        border-radius: 3px;
+    }
+
+    input[type=range]::-moz-range-thumb {
+        border: none;
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background: #21c1ff;
+
+    }
+
+
+    /*hide the outline behind the border*/
+
+    input[type=range]:-moz-focusring {
+        outline: 1px solid white;
+        outline-offset: -1px;
+    }
+
+    input[type=range]::-ms-track {
+        width: 300px;
+        height: 5px;
+        /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
+        background: transparent;
+        /*leave room for the larger thumb to overflow with a transparent border */
+        border-color: transparent;
+        border-width: 6px 0;
+        /*remove default tick marks*/
+        color: transparent;
+        z-index: -4;
+
+    }
+
+    input[type=range]::-ms-fill-lower {
+        background: #777;
+        border-radius: 10px;
+    }
+
+    input[type=range]::-ms-fill-upper {
+        background: #ddd;
+        border-radius: 10px;
+    }
+
+    input[type=range]::-ms-thumb {
+        border: none;
+        height: 16px;
+        width: 16px;
+        border-radius: 50%;
+        background: #21c1ff;
+    }
+
+    input[type=range]:focus::-ms-fill-lower {
+        background: #888;
+    }
+
+    input[type=range]:focus::-ms-fill-upper {
+        background: #ccc;
+    }
+
 }
